--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
